// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > Snapshot Tests > matches snapshot for default alert 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Alert Title
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Alert description
  </div>
</div>
`;

exports[`Alert > Snapshot Tests > matches snapshot for destructive alert 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Error
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Something went wrong
  </div>
</div>
`;
